Revert "Fix broken collapse of editor"
This reverts commit 1e909b3cf1be232e217fde0f169b0c558e5822cd.

--- a/src/ui/public/collapsible_sidebar/collapsible_sidebar.less
+++ b/src/ui/public/collapsible_sidebar/collapsible_sidebar.less
@@ -13,7 +13,6 @@
   }
 
   &.closed {
-    min-width: 0 !important;
     width: 0 !important;
     border-right-width: 0;
     border-left-width: 0;
